tests/build/cases/widget_new/when_missing_expr1.stderr
error: expected when expression
 --> cases/widget_new/when_missing_expr1.rs:6:9
  |
6 |         when
  |         ^^^^
