tests/build/cases/widget_new/when_missing_expr1.rs
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        when
    };
}
